2021-05-24  Omar Polo  <op@omarpolo.com>

	* gg.c: move `gg' to regress, as it's only used for the tests

2021-05-12  Omar Polo  <op@omarpolo.com>

	* utils.c (gen_certificate): don't add gmid as organisation when generating the certificate, and now it set the version 3, so it's compatible with java/android

2021-05-09  Omar Polo  <op@omarpolo.com>

	* server.c (apply_fastcgi): added fastcgi support!

2021-05-03  Omar Polo  <op@omarpolo.com>

	* parse.y: errors on duplicate values instead of silently using only the last value.

2021-04-30  Omar Polo  <op@omarpolo.com>

	* server.c (fmt_sbuf): ensure %p (path) is always absolute

	* gmid.c (load_vhosts): allow ``root'' rule to be specified per-location block

2021-04-29  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): added ``alias'' option to define hostname aliases for a server

2021-04-28  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): pidfile support with `-P pidfile'

2021-04-27  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): added ``env'' option to define environment vars for CGI scripts

	* log.c (fatal): lower the log priority for fatal errors from CRIT to ERR

2021-04-25  Omar Polo  <op@omarpolo.com>

	* server.c (open_dir): sort the auto index alphabetically

2021-04-21  Omar Polo  <op@omarpolo.com>

	* mime.c (load_default_mime): use `text/x-patch' for .patch and .diff files

2021-04-14  Omar Polo  <op@omarpolo.com>

	* log.c (handle_imsg_log): print the datetime when logging to stderr

2021-04-13  Omar Polo  <op@omarpolo.com>

	* ex.c (launch_cgi): define TLS_VERSION, TLS_CIPHER and TLS_CIPHER_STRENGTH for CGI scripts

2021-04-12  Omar Polo  <op@omarpolo.com>

	* 1.6.1 tagged

	* iri.c (path_clean): fix possible infinite loop in the IRI parsing code.

2021-03-31  Omar Polo  <op@omarpolo.com>

	* gmid.h (struct vhost): remove limits on the number of vhosts and location blocks

	* gmid.c (mkdirs): fix recursive mkdirs for configless mode

2021-03-29  Omar Polo  <op@omarpolo.com>
