@@ -1,3 +1,10 @@
+2021-06-11  Omar Polo  <op@omarpolo.com>
+
+	* fcgi.c (send_fcgi_req): send GATEWAY_INTERFACE, AUTH_TYPE,
+	REMOTE_USER, TLS_CLIENT_ISSUER, TLS_CLIENT_HASH, TLS_VERSION,
+	TLS_CIPHER, TLS_CIPHER_STRENGTH and TLS_CLIENT_NOT_BEFORE/AFTER.
+	(send_fcgi_req): support a custom list of params
+
 2021-05-24  Omar Polo  <op@omarpolo.com>
 
 	* gg.c: move `gg' to regress, as it's only used for the tests
